<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/textView.header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMenu"
            android:layout_width="@dimen/touch_size"
            android:layout_height="@dimen/touch_size"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_16"
            android:padding="@dimen/margin_8"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivTacoma"
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_image_height"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/tacoma" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/textView.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/tacoma_2021"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_38"
                app:layout_constraintBottom_toTopOf="@id/labelGetYoursNow"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/labelGetYoursNow"
                style="@style/textView.large.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/get_yours_now"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_21"
                app:layout_constraintBottom_toBottomOf="@id/ivTacoma"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvFilters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="@dimen/margin_8"
                android:clipChildren="false"
                app:layout_constraintTop_toBottomOf="@id/ivTacoma">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:clipChildren="false">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/labelFilters"
                        style="@style/textView.title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filters"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/makeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:background="@drawable/bg_rounded_corners_8"
                        android:elevation="@dimen/margin_4"
                        app:layout_constraintTop_toBottomOf="@id/labelFilters" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/modelSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:background="@drawable/bg_rounded_corners_8"
                        android:elevation="@dimen/margin_4"
                        app:layout_constraintTop_toBottomOf="@id/makeSpinner" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintTop_toBottomOf="@id/cvFilters"
                tools:listitem="@layout/item_car_list" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNoData"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/cvFilters"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/textView.large"
                android:elevation="@dimen/margin_8"
                android:text="@string/no_car_found"
                android:visibility="gone"
                android:gravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>